# owl2knowledgegraph

./: .gitignore  README.md  pyproject.toml
scripts/: download_foodon.py
src/owl2neo4j/: __init__.py  cli.py  loader.py  model.py  parser.py
tests/: conftest.py  test_foodon_contract.py  test_loader.py  test_parser.py
