[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "owl2neo4j"
version = "0.1.0"
description = "Load OWL ontologies with Owlready2 and materialize them as a Neo4j knowledge graph."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "neo4j>=5.20",
  "owlready2>=0.45",
  "rdflib>=7.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
owl2neo4j = "owl2neo4j.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
